# ProtMyth

./: .condarc  .flake8  .mypy.ini  .pylintrc  CODE_OF_CONDUCT.md  Jenkinsfile  LICENSE  README.md  copyright.txt  env.yml  main_lit.py  out_try.py  pylint.conf  pyproject.toml  pyrightconfig.json
.ci/: autosetup.sh  copyright_header_checker.py
docs/source/: conf.py  index.rst  modules.rst  protmyth.adaptors.rst  protmyth.data.rst  protmyth.databases.rst  protmyth.models.rst  protmyth.modules.common.rst  protmyth.modules.embeddings.rst  protmyth.modules.losses.rst  protmyth.modules.rst  protmyth.modules.seqdecoders.rst  protmyth.modules.seqencoders.esm.rst  protmyth.modules.seqencoders.rst  protmyth.modules.structdecoders.rst  protmyth.modules.structencoders.rst  protmyth.rst
reports/: unittest.xml
src/protmyth/adaptors/: common.py  mapper.py
src/protmyth/adaptors/esm/: config.py  layers.py  transformer.py
src/protmyth/clibs/: magic_loader_clib.cpp  magic_loader_clib.ext.yml
src/protmyth/data/: README.md  __init__.py  amino_acid_constants.py  baseholder.py  nucleic_acid_constants.py  sequences.py  types.py
src/protmyth/databases/: README.md
src/protmyth/models/: base.py  esm.py
src/protmyth/modules/: .base.py.swp  base.py  register.py
src/protmyth/modules/auxilary/: __init__.py  bert.py  bert_head.py  contact.py  contact_head.py  losses.py  utils.py
src/protmyth/modules/common/: attentions.py  layer_norms.py  layers.py  mask.py  rotary_embedding.py
tests/unit/data/: baseholder_test.py
tests/unit/modules/: __init__.py  base_test.py
(+26 files in other folders)
